Use max-height instead of height to avoid distorting thumbnails (#1518)

--- a/app/assets/stylesheets/spotlight/_pages.scss
+++ b/app/assets/stylesheets/spotlight/_pages.scss
@@ -253,10 +253,10 @@
       .box {
         padding: 0.25em;
         img {
-          height: 250px;
+          max-height: 250px;
           object-fit: cover;
           @media (max-width: $screen-sm-max) {
-            height: 175px;
+            max-height: 175px;
           }
         }
 
